BlueJProjects/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
G:\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
G:\lib\bluejcore.jar;G:\lib\junit-4.11.jar;G:\lib\hamcrest-core-1.3.jar;G:\lib\lang-stride.jar;G:\lib\userlib\apache-csv.jar;G:\lib\userlib\courserajava.jar;G:\lib\userlib\pi4j-core.jar;G:\lib\userlib\pi4j-device.jar;G:\lib\userlib\pi4j-gpio-extension.jar;G:\lib\userlib\pi4j-service.jar;C:\Users\DELL\Desktop\BlieJprjs
-d
C:\Users\DELL\Desktop\BlieJprjs\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\DELL\Desktop\BlieJprjs\PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file C:\Users\DELL\Desktop\BlieJprjs\PerimeterAssignmentRunner.java...
C:\Users\DELL\Desktop\BlieJprjs\PerimeterAssignmentRunner.java:84: error: ';' expected
            Shape s
                   ^
1 error
